implement diaries generator